Modificación edit de producto/vehiculos

--- a/admin/src/app/components/productos/create-producto/create-producto.component.html
+++ b/admin/src/app/components/productos/create-producto/create-producto.component.html
@@ -142,8 +142,8 @@
                 <!-- Inline radio buttons -->
                 <label class="form-label">Aire acondicionado</label>
                 <div class="cntr">
-                  <label for="rdo-1" class="btn-radio cursor">
-                    <input type="radio" id="rdo-1" value="Tiene" name="aire" [(ngModel)]="producto.aire">
+                  <label for="aire-1" class="btn-radio cursor">
+                    <input type="radio" id="aire-1" value="Tiene" name="aire" [(ngModel)]="producto.aire">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -153,10 +153,10 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-1" class="cursor">Tiene</label>
+                    <label for="aire-1" class="cursor">Tiene</label>
                   </label>
-                  <label for="rdo-2" class="btn-radio cursor">
-                    <input type="radio" id="rdo-2" value="No tiene" name="aire" [(ngModel)]="producto.aire">
+                  <label for="aire-2" class="btn-radio cursor">
+                    <input type="radio" id="aire-2" value="No tiene" name="aire" [(ngModel)]="producto.aire">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -166,7 +166,7 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-2" class="cursor">No tiene</label>
+                    <label for="aire-2" class="cursor">No tiene</label>
                   </label>
                 </div>
               </div>
@@ -174,8 +174,8 @@
                 <!-- Inline radio buttons -->
                 <label class="form-label">Dirección</label>
                 <div class="cntr">
-                  <label for="rdo-1" class="btn-radio cursor">
-                    <input type="radio" id="rdo-1" value="Hidraulica" name="direccion" [(ngModel)]="producto.direccion">
+                  <label for="direccion-1" class="btn-radio cursor">
+                    <input type="radio" id="direccion-1" value="Hidraulica" name="direccion" [(ngModel)]="producto.direccion">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -185,10 +185,10 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-1" class="cursor">Hidraulica</label>
+                    <label for="direccion-1" class="cursor">Hidraulica</label>
                   </label>
-                  <label for="rdo-2" class="btn-radio cursor">
-                    <input type="radio" id="rdo-2" value="Manual" name="direccion" [(ngModel)]="producto.direccion">
+                  <label for="direccion-2" class="btn-radio cursor">
+                    <input type="radio" id="direccion-2" value="Manual" name="direccion" [(ngModel)]="producto.direccion">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -198,7 +198,7 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-2" class="cursor">Manual</label>
+                    <label for="direccion-2" class="cursor">Manual</label>
                   </label>
                 </div>
               </div>
@@ -206,8 +206,8 @@
                 <!-- Inline radio buttons -->
                 <label class="form-label">GNC</label>
                 <div class="cntr">
-                  <label for="rdo-1" class="btn-radio cursor">
-                    <input type="radio" id="rdo-1" value="Tiene" name="gnc" [(ngModel)]="producto.gnc">
+                  <label for="gnc-1" class="btn-radio cursor">
+                    <input type="radio" id="gnc-1" value="Tiene" name="gnc" [(ngModel)]="producto.gnc">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -217,10 +217,10 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-1" class="cursor">Tiene</label>
+                    <label for="gnc-1" class="cursor">Tiene</label>
                   </label>
-                  <label for="rdo-2" class="btn-radio cursor">
-                    <input type="radio" id="rdo-2" value="No tiene" name="gnc" [(ngModel)]="producto.gnc">
+                  <label for="gnc-2" class="btn-radio cursor">
+                    <input type="radio" id="gnc-2" value="No tiene" name="gnc" [(ngModel)]="producto.gnc">
                     <svg width="20px" height="20px" viewBox="0 0 20 20">
                       <circle cx="10" cy="10" r="9"></circle>
                       <path
@@ -230,7 +230,7 @@
                         d="M10,1 L10,1 L10,1 C14.9705627,1 19,5.02943725 19,10 L19,10 L19,10 C19,14.9705627 14.9705627,19 10,19 L10,19 L10,19 C5.02943725,19 1,14.9705627 1,10 L1,10 L1,10 C1,5.02943725 5.02943725,1 10,1 L10,1 Z"
                         class="outer"></path>
                     </svg>
-                    <label for="rdo-2" class="cursor">No tiene</label>
+                    <label for="gnc-2" class="cursor">No tiene</label>
                   </label>
                 </div>
               </div>
